# potentialNavigationNAO

./: CMakeLists.txt  README.md  badControlLaw.txt  branchOne.txt  branchTwo.txt  cJoystick.cpp  cJoystick.h  main.cpp  of_driving.cpp  of_driving.h  parallel_process.cpp  parallel_process.h  potentialNavigationNAO.cpp  potentialNavigationNAO.h  qiproject.xml  utils.cpp  utils.h
plot/: plotting.m
plot18/: cameraFPS.txt  filtp.txt  full_cycle_time.txt  nofiltp.txt  theta.txt
